--- a/atak-compose/build.gradle
+++ b/atak-compose/build.gradle
@@ -12,6 +12,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'atak-takdev-plugin'
 apply plugin: 'org.jetbrains.kotlin.android'
 apply from: "$rootDir/gradle/android.gradle"
+apply from: "$rootDir/gradle/deploy.gradle"
 
 android {
     namespace 'com.dittofederal.atak.compose'
